# mtgo-deckfinder

./: .gitignore  CHANGELOG.md  Cargo.toml  HOW_TO_USE.md  LICENSE  README.md
.github/workflows/: ci.yml
src/: cache.rs  cards.rs  cluster.rs  collection.rs  error.rs  export.rs  fit.rs  gap.rs  http.rs  lib.rs  main.rs  model.rs  names.rs  price.rs  rank.rs  sample.rs  source.rs  store.rs
tests/fixtures/: atomic_cards_sample.json  collection.csv  mtgo_detail.html  mtgo_index.html  mtgo_league.html
