[package]
name = "mtgo-deckfinder"
version = "0.1.0"
edition = "2024"
description = "Find, rank, and export recent competitive MTGO decklists as MTGO-importable text."
license = "MIT"
repository = "https://github.com/mauriruiz/mtgo-deckfinder"
readme = "README.md"
keywords = ["mtg", "mtgo", "magic", "deck", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
thiserror = "2"
anyhow = "1"
