[package]
name = "mtgo-deckfinder"
version = "0.1.0"
edition = "2024"
description = "Find, rank, and export recent competitive MTGO decklists as MTGO-importable text."
license = "MIT"
repository = "https://github.com/mauriruiz/mtgo-deckfinder"
readme = "README.md"
keywords = ["mtg", "mtgo", "magic", "deck", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "std", "clock"] }
thiserror = "2"
anyhow = "1"
# Phase 1: real source + bulk card-name reference.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip"] }
flate2 = "1"
sha2 = "0.10"
dirs = "5"
unicode-normalization = "0.1"
